# raytracer-chiquito

./: .gitignore  CMakeLists.txt  LICENSE  README.md  color.h  main.cpp  vec3.h
src/: color.h  hittable.h  ray.h  sphere.h  vec3.h
